D/S/V/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ninor
  labels:
    name: ninor
    environment: production
